Update views and JS to use cookie-manager 1.0.0 spec

--- a/src/main/views/cookies.njk
+++ b/src/main/views/cookies.njk
@@ -260,7 +260,7 @@
     ]
   }) }}
 
-  <form id="cm-preference-form" class="js-show">
+  <form class="cookie-preferences-form js-show">
     {{ govukRadios({
       classes: 'govuk-radios',
       idPrefix: 'analytics',
