--- a/src/main/views/court-details/in-person-court.njk
+++ b/src/main/views/court-details/in-person-court.njk
@@ -20,11 +20,22 @@
     <div class="govuk-grid-column-two-thirds">
       <div class="govuk-grid-row">
         {% for address in results.addresses %}
-          {% if results.addresses.length > 1 %}
+          {% if results.addresses.length == 2 %}
             <div class="govuk-grid-column-one-half multiple-addresses">
               <h2 class="govuk-heading-l">
                 {{ address.type }}:
               </h2>
+               <h2 class="govuk-heading-s">
+                {{ address.description }}
+               </h2>
+          {% elif results.addresses.length == 3 %}
+               <div class="govuk-grid-column-one-third multiple-addresses">
+                 <h2 class="govuk-heading-l">
+                   {{ address.type }}:
+                 </h2>
+                 <h2 class="govuk-heading-s">
+                 {{ address.description }}
+                 </h2>
           {% else %}
             <h2 class="govuk-heading-l single-address">
               {{ address.type }}:
