--- a/src/main/views/court-details/not-in-person-court.njk
+++ b/src/main/views/court-details/not-in-person-court.njk
@@ -24,18 +24,42 @@
             <h2 class="govuk-heading-l postal-address">
               {{ contactUsHeading }}
             </h2>
-            {% if results.addresses[0] %}
-              <h3 class="govuk-heading-m">
-                {{ results.addresses[0].type }}:
-              </h3>
-              <p class="govuk-body-m address">
-                {% for addressLine in results.addresses[0].address_lines %}
-                  {{ addressLine }}<br>
-                {% endfor %}
-                {{ results.addresses[0].town }}<br>
-                {{ results.addresses[0].postcode }}
-              </p>
-            {% endif %}
+            {% for address in results.addresses %}
+                     {% if results.addresses.length == 2 %}
+                       <div class="govuk-grid-column-one-half multiple-addresses">
+                         <h2 class="govuk-heading-l">
+                           {{ address.type }}:
+                         </h2>
+                          <h2 class="govuk-heading-s">
+                           {{ address.description }}
+                          </h2>
+                     {% elif results.addresses.length == 3 %}
+                       <div class="govuk-grid-column-one-third multiple-addresses">
+                         <h2 class="govuk-heading-l">
+                            {{ address.type }}:
+                          </h2>
+                          <h2 class="govuk-heading-s">
+                             {{ address.description }}
+                          </h2>
+                     {% else %}
+                       <h2 class="govuk-heading-l single-address">
+                         {{ address.type }}:
+                       </h2>
+                       <h3 class="govuk-heading-m">
+                         {{ addressHeading }}
+                       </h3>
+                     {% endif %}
+                       <p class="govuk-body-m address">
+                         {% for addressLine in address.address_lines %}
+                           {{ addressLine }}<br>
+                         {% endfor %}
+                         {{ address.town }}<br>
+                         {{ address.postcode }}
+                       </p>
+                     {% if results.addresses.length > 1 %}
+                       </div>
+                     {% endif %}
+                   {% endfor %}
           </div>
         </div>
 
