--- a/src/main/views/court-details/in-person-court.njk
+++ b/src/main/views/court-details/in-person-court.njk
@@ -218,7 +218,7 @@
       {% if (results['areas_of_law'] and results['areas_of_law'].length > 0) or (results.additionalLinks.findOutMoreAbout and results.additionalLinks.findOutMoreAbout.length) %}
         <div class="govuk-grid-row" id="areas-of-law">
           <h3 class="govuk-heading-m">
-            {{ areasOfLawHeading }}:
+            {{ areasOfLawHeading }}
           </h3>
           <ul class="govuk-list">
             {% for area in results['areas_of_law'] | sort(attribute="name") %}
@@ -249,7 +249,7 @@
       {% if results.additional_links and results.additional_links.length %}
         <div class="govuk-grid-row" id="find-out-more-about">
           <h3 class="govuk-heading-m">
-            {{ findOutMoreAboutHeading }}:
+            {{ findOutMoreAboutHeading }}
           </h3>
           <ul class="govuk-list">
             {% for additionalLink in results.additional_links %}
@@ -263,7 +263,7 @@
 
       <div class="govuk-grid-row">
         <h3 class="govuk-heading-m">
-          {{ complaintHeading }}:
+          {{ complaintHeading }}
         </h3>
         <p class="govuk-body-m">
           <a class="govuk-link" href="https://www.gov.uk/government/organisations/hm-courts-and-tribunals-service/about/complaints-procedure">{{ complaintText }}</a>
@@ -273,7 +273,7 @@
       {% if results.crown_location_code or results.county_location_code or results.magistrates_location_code or (results['dx_number'] and results['dx_number'].length > 0) %}
         <div class="govuk-grid-row" id="location-codes">
           <h3 class="govuk-heading-m">
-            {{ courtCodesHeading }}:
+            {{ courtCodesHeading }}
           </h3>
           {% if results.crown_location_code %}
             <p class="govuk-body-m">
