added safe to allow links to show

--- a/src/main/views/court-details/in-person-court.njk
+++ b/src/main/views/court-details/in-person-court.njk
@@ -188,7 +188,7 @@
                 </dd>
                 <dd class="govuk-summary-list__value">
                   <p class="govuk-body-m">
-                    {{ facility.description }}
+                    {{ facility.description | safe }}
                   </p>
                 </dd>
               </div>
