--- a/src/main/views/court-details/not-in-person-court.njk
+++ b/src/main/views/court-details/not-in-person-court.njk
@@ -44,10 +44,18 @@
 
               {% endfor %}
 
+              {% if address.fields_of_law.courts.length == 0 %}
+                {% set descLabel = descLabel + ' cases' %}
+              {% endif %}
+
               {% for courtType in address.fields_of_law.courts %}
 
                 {% if loop.index == (address.fields_of_law.courts.length) %}
-                    {% set descLabel = descLabel + ' or ' +  courtType %}
+                    {% if address.fields_of_law.courts.length > 1 %}
+                      {% set descLabel = descLabel + ' or ' +  courtType + ' cases' %}
+                    {% else %}
+                      {% set descLabel = descLabel + courtType + ' cases' %}
+                    {% endif %}
                 {% else %}
                   {% set descLabel = descLabel + ', ' + courtType %}
                 {% endif %}
