FACT-1232 made changes to EN accessibility statement

--- a/src/main/views/accessibility-statement.njk
+++ b/src/main/views/accessibility-statement.njk
@@ -21,6 +21,11 @@
   <p class="govuk-body-m">{{ p4 | safe }}</p>
 
   <h2 class="govuk-heading-l">
+    {{ h13 }}
+  </h2>
+  <p class="govuk-body-m">{{ p21 }}</p>
+
+  <h2 class="govuk-heading-l">
     {{ h3 }}
   </h2>
   <p class="govuk-body-m">{{ p6 }}</p>
@@ -45,6 +50,7 @@
   <h2 class="govuk-heading-l">
     {{ h6 }}
   </h2>
+  <p class="govuk-body-m">{{ p22 | safe }}</p>
   <p class="govuk-body-m">{{ p11 }}</p>
   <p class="govuk-body-m">{{ p12 }}</p>
 
