--- a/src/main/views/court-details/in-person-court.njk
+++ b/src/main/views/court-details/in-person-court.njk
@@ -116,10 +116,10 @@
 
       <div class="govuk-grid-row">
         <p class="govuk-body-m" id="direction-map">
-          <a class="govuk-link" href="https://maps.google.com/maps?q={{ results.lat }},{{ results.lon }}">{{ directionsText }}</a>
+          <a class="govuk-link" rel="noreferrer noopener" target="_blank" href="https://maps.google.com/maps?q={{ results.lat }},{{ results.lon }}">{{ directionsText }} (opens in new tab)</a>
         </p>
         <p class="govuk-body-m">
-          <a class="govuk-link" href="{{ visitingExpectationLink }}">{{ visitingExpectationText }}</a>
+          <a class="govuk-link" rel="noreferrer noopener" target="_blank" href="{{ visitingExpectationLink }}">{{ visitingExpectationText }} (opens in new tab)</a>
         </p>
       </div>
       {% if results['urgent_message'] %}
@@ -256,7 +256,7 @@
             {{ translatorsOrInterpretersHeading }}
           </h4>
           <p class="govuk-body-m">
-            <a href="https://www.gov.uk/get-interpreter-at-court-or-tribunal">{{ translatorsOrInterpretersText }}</a>
+            <a rel="noreferrer noopener" target="_blank" href="https://www.gov.uk/get-interpreter-at-court-or-tribunal">{{ translatorsOrInterpretersText }} (opens in new tab)</a>
           </p>
         </div>
       {% endif %}
@@ -291,7 +291,7 @@
               {% endif %}
               <li>
                 {% if externalLink %}
-                  <a class="govuk-link" href="{{ externalLink }}">{{ displayName }}</a>
+                  <a class="govuk-link" rel="noreferrer noopener" target="_blank" href="{{ externalLink }}">{{ displayName }}<span class="govuk-visually-hidden"> (opens in new tab)</span></a>
                 {% else %}
                   <p>
                      {{displayName}}
@@ -311,7 +311,7 @@
           <ul class="govuk-list">
             {% for additionalLink in results.additional_links %}
               <li>
-                <a class="govuk-link" href="{{ additionalLink.url }}">{{ additionalLink.description }}</a>
+                <a class="govuk-link" rel="noreferrer noopener" target="_blank" href="{{ additionalLink.url }}">{{ additionalLink.description }}<span class="govuk-visually-hidden"> (opens in new tab)</span></a>
               </li>
             {% endfor %}
           </ul>
@@ -323,7 +323,7 @@
           {{ complaintHeading }}
         </h3>
         <p class="govuk-body-m">
-          <a class="govuk-link" href="https://www.gov.uk/government/organisations/hm-courts-and-tribunals-service/about/complaints-procedure">{{ complaintText }}</a>
+          <a class="govuk-link" rel="noreferrer noopener" target="_blank" href="https://www.gov.uk/government/organisations/hm-courts-and-tribunals-service/about/complaints-procedure">{{ complaintText }}<span class="govuk-visually-hidden"> (opens in new tab)</span></a>
         </p>
       </div>
 
@@ -374,15 +374,17 @@
           <p class="govuk-body-m">
             {{ registerACText }}
           </p>
-          <p><a class="govuk-link govuk-body-m" href="https://www.gov.uk/guidance/professional-users-court-and-tribunal-access-scheme">
+          <p><a class="govuk-link govuk-body-m" rel="noreferrer noopener" target="_blank" href="https://www.gov.uk/guidance/professional-users-court-and-tribunal-access-scheme">
             {{ registerACLink }}
+            <span class="govuk-visually-hidden"> (opens in new tab)</span>
           </a></p>
         {% else %}
           <p class="govuk-body-m">
             {{ learnACText }}
           </p>
-         <p><a class="govuk-link govuk-body-m" href="https://www.gov.uk/guidance/professional-users-court-and-tribunal-access-scheme">
+         <p><a class="govuk-link govuk-body-m" rel="noreferrer noopener" target="_blank" href="https://www.gov.uk/guidance/professional-users-court-and-tribunal-access-scheme">
             {{ learnACLink }}
+            <span class="govuk-visually-hidden"> (opens in new tab)</span>
           </a></p>
         {% endif %}
       </div>
