Accessibility WCAG FACT 3.1.1: Language of Page (Level A)

--- a/src/main/views/template.njk
+++ b/src/main/views/template.njk
@@ -11,7 +11,7 @@
   {% include "webpack/css.njk" %}
   <script>
     dataLayer = window.dataLayer || [];
-    dataLayer.push({"language": {{ language | dump | safe }}, "event": "Site language"})
+    document.documentElement.setAttribute("lang", {{ language | dump | safe }});
   </script>
 
   <meta name="google-site-verification" content="3glfkE1sBXj7EtEdO0ktOm5kyR9E14kR7yw_yJ6GH4U" />
