--- a/src/main/views/template.njk
+++ b/src/main/views/template.njk
@@ -11,8 +11,9 @@
   {% include "webpack/css.njk" %}
   <script>
     dataLayer = window.dataLayer || [];
-    dataLayer.push({"lang": {{ language | dump | safe }}, "event": "Site language"})
+    dataLayer.push({"lang": {{ language | dump | safe }}, "event": "Site language"});
     document.documentElement.setAttribute("lang", {{ language | dump | safe }});
+    document.documentElement.setAttribute("xml:lang", {{ language | dump | safe }});
   </script>
 
   <meta name="google-site-verification" content="3glfkE1sBXj7EtEdO0ktOm5kyR9E14kR7yw_yJ6GH4U" />
