--- a/src/main/views/court-details/in-person-court.njk
+++ b/src/main/views/court-details/in-person-court.njk
@@ -375,16 +375,14 @@
             {{ registerACText }}
           </p>
           <p><a class="govuk-link govuk-body-m" rel="noreferrer noopener" target="_blank" href="https://www.gov.uk/guidance/professional-users-court-and-tribunal-access-scheme">
-            {{ registerACLink }}
-            <span class="govuk-visually-hidden"> (opens in new tab)</span>
+            {{ registerACLink }}<span class="govuk-visually-hidden"> (opens in new tab)</span>
           </a></p>
         {% else %}
           <p class="govuk-body-m">
             {{ learnACText }}
           </p>
          <p><a class="govuk-link govuk-body-m" rel="noreferrer noopener" target="_blank" href="https://www.gov.uk/guidance/professional-users-court-and-tribunal-access-scheme">
-            {{ learnACLink }}
-            <span class="govuk-visually-hidden"> (opens in new tab)</span>
+            {{ learnACLink }}<span class="govuk-visually-hidden"> (opens in new tab)</span>
           </a></p>
         {% endif %}
       </div>
