--- a/src/main/views/court-details/not-in-person-court.njk
+++ b/src/main/views/court-details/not-in-person-court.njk
@@ -229,7 +229,7 @@
                     {% if applicationUpdate.email %}
                       <a class="govuk-link" href="mailto:{{ applicationUpdate.email }}">{{ applicationUpdate.email }}</a>
                     {% else %}
-                      <a class="govuk-link" rel="noreferrer noopener" target="_blank" href="{{ applicationUpdate.external_link }}">{{ applicationUpdate.external_link_description }}<span class="govuk-visually-hidden"> (opens in new tab)</span></a>
+                      <a class="govuk-link" rel="noreferrer noopener" target="_blank" href="{{ applicationUpdate.external_link }}">{{ applicationUpdate.external_link_description }}</a><span class="govuk-visually-hidden"> (opens in new tab)</span>
                     {% endif %}
                   </dd>
                 </div>
@@ -282,7 +282,7 @@
                 {% endif %}
                 <li>
                   {% if externalLink %}
-                    <a class="govuk-link" rel="noreferrer noopener" target="_blank" href="{{ externalLink }}">{{ displayName }}<span class="govuk-visually-hidden"> (opens in new tab)</span></a>
+                    <a class="govuk-link" rel="noreferrer noopener" target="_blank" href="{{ externalLink }}">{{ displayName }}</a><span class="govuk-visually-hidden"> (opens in new tab)</span>
                   {% else %}
                     <p>
                       {{displayName}}
@@ -302,7 +302,7 @@
             <ul class="govuk-list">
               {% for additionalLink in results.additional_links %}
                 <li>
-                  <a class="govuk-link" rel="noreferrer noopener" target="_blank" href="{{ additionalLink.url }}">{{ additionalLink.description }}<span class="govuk-visually-hidden"> (opens in new tab)</span></a>
+                  <a class="govuk-link" rel="noreferrer noopener" target="_blank" href="{{ additionalLink.url }}">{{ additionalLink.description }}</a><span class="govuk-visually-hidden"> (opens in new tab)</span>
                 </li>
               {% endfor %}
             </ul>
@@ -315,7 +315,7 @@
           </h3>
           <p class="govuk-body-m">
             <a class="govuk-link" rel="noreferrer noopener" target="_blank"
-               href="https://www.gov.uk/government/organisations/hm-courts-and-tribunals-service/about/complaints-procedure">{{ complaintText }}<span class="govuk-visually-hidden"> (opens in new tab)</span></a>
+               href="https://www.gov.uk/government/organisations/hm-courts-and-tribunals-service/about/complaints-procedure">{{ complaintText }}</a><span class="govuk-visually-hidden"> (opens in new tab)</span>
           </p>
         </div>
 
