added changes for new tabs on links on home page

--- a/src/main/views/home.njk
+++ b/src/main/views/home.njk
@@ -45,7 +45,7 @@
 
     <p class="govuk-inset-text">{{ p1_text}}<a class="govuk-link" href="{{ p1_link }}">{{ p1_link_text }}</a>.</p>
 
-    <p class="govuk-body-m">{{ p2_text }}<a href="https://www.justice-ni.gov.uk/topics/courts-and-tribunals" class="govuk-link">{{ p2_link_text }}</a>{{ p2_text2 }}.</p>
+    <p class="govuk-body-m">{{ p2_text }}<a rel="noreferrer noopener" target="_blank" href="https://www.justice-ni.gov.uk/topics/courts-and-tribunals" class="govuk-link">{{ p2_link_text }}</a>{{ p2_text2 }}.</p>
 
     <p class="govuk-body-m">{{ p3_text }}</p>
     <ul>
@@ -54,7 +54,7 @@
       {% endfor %}
     </ul>
 
-    <p class="govuk-body-m">{{ p4_text }}<a href="https://www.scotcourts.gov.uk/the-courts/the-tribunals" class="govuk-link">{{ p4_link_text }}</a>{{ p4_text2 }}.</p>
+    <p class="govuk-body-m">{{ p4_text }}<a rel="noreferrer noopener" target="_blank" href="https://www.scotcourts.gov.uk/the-courts/the-tribunals" class="govuk-link">{{ p4_link_text }}</a>{{ p4_text2 }}.</p>
 
   </div>
 </div>{% endblock %}
