adding in fee paragraph

--- a/src/main/views/home.njk
+++ b/src/main/views/home.njk
@@ -47,6 +47,8 @@
 
     <p class="govuk-body-m">{{ p2_text }}<a rel="noreferrer noopener" target="_blank" href="https://www.justice-ni.gov.uk/topics/courts-and-tribunals" class="govuk-link">{{ p2_link_text }}</a>{{ p2_text2 }}.</p>
 
+    <p class="govuk-body-m">{{ p_fee_advice }}</p>
+
     <p class="govuk-body-m">{{ p3_text }}</p>
     <ul>
       {% for bullet in bullets2 %}
