adding cath link to fact start page

--- a/src/main/views/home.njk
+++ b/src/main/views/home.njk
@@ -41,6 +41,12 @@
       isStartButton: true
     }) }}
 
+    <h2 class="govuk-heading-m">{{ h3 }}</h2>
+
+    <p class="govuk-body-m"><a  rel="noreferrer noopener" target="_blank" class="govuk-link" href="{{ p5_link }}">{{ p5_link_text }}</a>{{ p5_text}}.</p>
+
+    <p class="govuk-body-m">{{ p6_text}}<a class="govuk-link" href="{{ p6_link }}">{{ p6_link_text }}</a>.</p>
+
     <h2 class="govuk-heading-m">{{ h2 }}</h2>
 
     <p class="govuk-inset-text">{{ p1_text}}<a class="govuk-link" href="{{ p1_link }}">{{ p1_link_text }}</a>.</p>
