got it working but not decided on how it should work yet

--- a/src/main/views/search/location.njk
+++ b/src/main/views/search/location.njk
@@ -24,11 +24,11 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    {% if courtHistoryFlag %}
+    {% if (courtHistoryFlag and courtHistory.slug and courtHistory.slug.length > 0) %}
       {% set courtHistory %}
         <p class="govuk-notification-banner__heading">
           {{ courtHistoryText }}
-          <a class="govuk-notification-banner__link" href="/courts/{{ courtHistoryCourt.slug }}">{{ courtHistoryCourt.name }}</a>.
+          <a class="govuk-notification-banner__link" href="/courts/{{ courtHistory.slug }}">{{ courtHistory.name }}</a>.
         </p>
       {% endset %}
 
