changing message slightly, need to rename 1st one from new court to old

--- a/src/main/views/search/location.njk
+++ b/src/main/views/search/location.njk
@@ -28,6 +28,8 @@
       {% set courtHistory %}
         <p class="govuk-notification-banner__heading">
           {{ courtHistoryText }}
+          <a class="govuk-notification-banner__link" href="/courts/{{ courtHistory.slug }}">{{ courtHistory.name }}</a>
+          {{ to }}
           <a class="govuk-notification-banner__link" href="/courts/{{ courtHistory.slug }}">{{ courtHistory.name }}</a>.
         </p>
       {% endset %}
