added ucd text, just need to confirm welsh

--- a/src/main/views/search/location.njk
+++ b/src/main/views/search/location.njk
@@ -28,7 +28,7 @@
       {% set courtHistory %}
         <p class="govuk-notification-banner__heading">
           {{ courtHistoryText }}
-          <a class="govuk-notification-banner__link" href="/courts/{{ courtHistory.slug }}">{{ courtHistory.name }}</a>
+          <a class="govuk-notification-banner__link" href="/courts/{{ courtHistory.slug }}">{{ courtHistory.historicalName }}</a>
           {{ to }}
           <a class="govuk-notification-banner__link" href="/courts/{{ courtHistory.slug }}">{{ courtHistory.name }}</a>.
         </p>
