- adds filter that appends new tab warning

--- a/src/main/views/court-details/in-person-court.njk
+++ b/src/main/views/court-details/in-person-court.njk
@@ -139,7 +139,7 @@
             {{ additionalInfoHeading }}
           </h3>
           <div class="govuk-body-m">
-            {{ results.info | safe }}
+            {{ results.info | warningAppender | safe }}
           </div>
         </div>
       {% endif %}
