FACT-2226 accessability update

--- a/src/main/views/accessibility-statement.njk
+++ b/src/main/views/accessibility-statement.njk
@@ -65,6 +65,11 @@
   <p class="govuk-body-m">{{ p14 }}</p>
 
   <h3 class="govuk-heading-m">
+    {{ h14 }}
+  </h3>
+  <p class="govuk-body-m">{{ p23 | safe }}</p>
+
+  <h3 class="govuk-heading-m">
     {{ h9 }}
   </h3>
   <p class="govuk-body-m">{{ p15 }}</p>
